bk_ida/gccida/c3/run_directive
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:863:22: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  run_directive( cpp_reader_0 *pfile, int dir_no, const char *buf, size_t count) 
                     ^~~~~~~~~~~~
                     cpp_reader
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:870:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *buffer; // r14 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:894:12: error: expected expression
*( _OWORD *)( object_base + 40) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:894:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( object_base + 40) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:895:12: error: expected expression
*( _OWORD *)( object_base + 24) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:895:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( object_base + 24) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:896:12: error: expected expression
*( _OWORD *)( object_base + 8) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:896:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( object_base + 8) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:897:12: error: expected expression
*( _OWORD *)( object_base + 72) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:897:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( object_base + 72) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:898:12: error: expected expression
*( _OWORD *)( object_base + 120) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:898:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( object_base + 120) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:899:12: error: expected expression
*( _OWORD *)( object_base + 104) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:899:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( object_base + 104) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:900:12: error: expected expression
*( _OWORD *)( object_base + 88) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:900:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( object_base + 88) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:901:12: error: expected expression
*( _OWORD *)( object_base + 56) = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:901:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( object_base + 56) = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/cpplib.c:910:33: error: expected expression
pfile->buffer = ( cpp_buffer_0 *)object_base; 
                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/run_directive/src/obj/cpplib.o] Error 1
